*** Changelog ***

= 8.2.0 - xxxx-xx-xx =
- Tweak - Remove the functionality for saving the customized statement descriptors.
* Tweak - Remove unused WC_Stripe_Old_Settings_UPE_Toggle_Controller class and related scripts.

= 8.1.1 - 2024-04-04 =
* Fix - Do not hide PRB on cart and product page when there are required custom checkout fields.
* Fix - Issue with subscription renewal when the `start_date` of the mandate is set in the past.

= 8.1.0 - 2024-03-28 =
* Add - Include Stripe account details to the settings page.
* Add - Include Stripe API version in logs.
* Add - Enable the updated checkout experience (UPE) by default for new accounts.
* Add - Banner encouraging the transition to the updated checkout experience.
* Fix - Hiding the refund button and replacing it with a disabled "Refunding unavailable" button when the order is not captured.
* Fix - Incorrect payment amount sent to Stripe when using three-decimal currencies.
* Fix - PHP 8.2 deprecation warnings within the WC_Stripe_UPE_Payment_Method class.
* Fix - Resolved an issue with saving plugin settings when bank descriptor value is invalid.
* Fix - Issue with rendering Sepa on checkout page when card is disabled in non-UPE mode.
* Fix - Resolved an issue in processing subscription payments with currencies not supported for mandate data.
* Fix - Resolved an issue with subscription when attaching customers directly without 3DS due to Indian payment regulations.
* Fix - Error saving Stripe settings when testmode is enabled without any Stripe test API keys saved yet.
* Tweak - Update the Stripe JS library to 1.36.0.
* Tweak - Removed the "Early Access" pill and "Disable" option from the Stripe payment methods dropdown menu.
* Tweak - Remove unused UPE title field.
* Tweak - Add WooCommerce as a plugin dependency.
* Tweak - Update the interface for the setting to toggle the New checkout experience to make it relative to the Legacy one instead.

= 8.0.1 - 2024-03-13 =