@@ -1,8 +1,10 @@
 *** Changelog ***
 
 = 8.2.0 - xxxx-xx-xx =
-- Tweak - Remove the functionality for saving the customized statement descriptors.
+* Add - Enable custom styling of the Payment Elements for stores using the updated checkout experience.
+* Tweak - Remove the functionality for saving the customized statement descriptors.
 * Tweak - Remove unused WC_Stripe_Old_Settings_UPE_Toggle_Controller class and related scripts.
+* Update - Save the Stripe default appearance settings in a transient instead of the browsers local storage.
 
 = 8.1.1 - 2024-04-04 =
 * Fix - Do not hide PRB on cart and product page when there are required custom checkout fields.
